# handler/profile.go
@@ -1,34 +1,16 @@
 package handler
 
 import (
-	"errors"
-	"fmt"
-	"github.com/SawitProRecruitment/UserService/config"
 	"github.com/SawitProRecruitment/UserService/generated"
 	"github.com/SawitProRecruitment/UserService/repository"
-	"github.com/golang-jwt/jwt"
 	"github.com/labstack/echo/v4"
 	"net/http"
-	"strings"
 )
 
-func (s *Server) GetUserProfile(c echo.Context) error {
-	headers := c.Request().Header
-
-	token := headers.Get("Authorization")
-	userId, err := validateAuthHeader(c, token)
+func (s *Server) GetUserProfile(ctx echo.Context) error {
+	profile, err := s.authCheck(ctx)
 	if err != nil {
-		return newError(c, http.StatusUnauthorized, "invalid authorization token")
-	}
-
-	profile, err := s.Repository.GetProfile(c.Request().Context(), repository.GetProfileInput{
-		Id: userId,
-	})
-	if err != nil {
-		return newInternalServerError(c, err)
-	}
-	if profile == nil {
-		return newError(c, http.StatusNotFound, "User is not found")
+		return err.toEcho(ctx)
 	}
 
 	response := generated.ProfileResponse{
@@ -36,39 +18,42 @@ func (s *Server) GetUserProfile(c echo.Context) error {
 		PhoneNumber: profile.PhoneNumber,
 	}
 
-	return c.JSON(http.StatusOK, response)
+	return ctx.JSON(http.StatusOK, response)
 }
 
-func validateAuthHeader(ctx echo.Context, token string) (string, error) {
-	if token == "" || !strings.HasPrefix(token, "Bearer ") {
-		return "", newError(ctx, http.StatusUnauthorized, "Authorization header is missing")
-	}
-
-	removedPrefix := strings.TrimPrefix(token, "Bearer ")
-
-	return validateJwtToken(removedPrefix)
-}
-
-func validateJwtToken(tokenString string) (string, error) {
-	verifyKey, err := jwt.ParseRSAPublicKeyFromPEM(config.Instance.PublicKey)
+func (s *Server) PatchUserProfile(ctx echo.Context) error {
+	existingProfile, err := s.authCheck(ctx)
 	if err != nil {
-		return "", err
+		return err.toEcho(ctx)
 	}
 
-	token, err := jwt.ParseWithClaims(tokenString, &jwt.StandardClaims{}, func(token *jwt.Token) (interface{}, error) {
-		if _, ok := token.Method.(*jwt.SigningMethodRSA); !ok {
-			return nil, fmt.Errorf("unexpected signing method: %v", token.Header["alg"])
+	var req generated.UpdateUserProfileRequest
+	if err := ctx.Bind(&req); err != nil {
+		return newError(ctx, http.StatusBadRequest, "Invalid request body: "+err.Error())
+	}
+
+	var updateRequest = repository.UpdateUserProfileInput{
+		Id: existingProfile.Id,
+	}
+	if req.PhoneNumber != nil {
+		existingUser, err := s.Repository.GetUserByPhoneNumber(
+			ctx.Request().Context(), repository.GetUserByPhoneNumberInput{
+				PhoneNumber: *req.PhoneNumber,
+			})
+		if err != nil {
+			return newInternalServerError(ctx, err)
 		}
-		return verifyKey, nil
-	})
-
-	if err != nil {
-		return "", err
+		if existingUser != nil {
+			return newError(ctx, http.StatusBadRequest, "Phone number already registered")
+		}
+		updateRequest.PhoneNumber = *req.PhoneNumber
+	} else {
+		updateRequest.FullName = *req.FullName
 	}
 
-	if claims, ok := token.Claims.(*jwt.StandardClaims); ok && token.Valid {
-		return claims.Issuer, nil
+	if err := s.Repository.UpdateUserProfile(ctx.Request().Context(), updateRequest); err != nil {
+		return newInternalServerError(ctx, err)
 	}
 
-	return "", errors.New("invalid authorization token")
+	return ctx.JSON(http.StatusNoContent, nil)
 }
